--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <title>Connect 4</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  
   <body>
     <div id="pop-up-container">
-      <button id="hard" class="pop-up">Hard</button>
-      <button id="medium" class="pop-up">Medium</button>
-      <button id="easy" class="pop-up">Easy</button>
+      <a href=""><button id="hard" class="pop-up">Hard</button></a>
+      <a href=""><button id="medium" class="pop-up">Medium</button></a>
+      <a href=""><button id="easy" class="pop-up">Easy</button></a>
     </div>
+    <div id="player-one" class="chip"></div>
     <button id="piece"></button>
     <h1 id="title">Connect-4</h1>
 
     <div id="container">
       <button id="computer" class="option">Computer</button>
-      <button id="duo" class="option">Pass and Play</button>
+      <a id = "link" href=""><button id="duo" class="option">Pass and Play</button></a>
     </div>
     
   </body>
   
-  <div id="player-one" class="chip"></div>
+  
   
 
   <script src="MainScreen.js"></script>
