--- a/Duo.html
+++ b/Duo.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect 4</title>
+    <link rel="stylesheet" href="gameStyle.css">
 </head>
 <body>
-    
+    <img id = "container" src="board.png" alt="Connect-4 Board">
 </body>
+
+<script src="DuoPlayer.js"></script>
 </html>
