--- a/Duo.html
+++ b/Duo.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connect 4</title>
-    <link rel="stylesheet" href="gameStyle.css">
-</head>
-<body>
-    <img id = "container" src="board.png" alt="Connect-4 Board">
-</body>
+    <link rel="stylesheet" href="gameStyle.css" />
+  </head>
+  <body>
+    <div id = "container">
+      <img src="board.png" alt="Connect-4 Board" />
+      <div id = "one" class="col"></div>
+      <div id = "two" class="col"></div>
+      <div id = "three" class="col"></div>
+      <div id = "four" class="col"></div>
+      <div id = "five" class="col"></div>
+      <div id = "six" class="col"></div>
+      <div id = "seven" class="col"></div>
+    
+    </div>
+    
+  </body>
 
-<script src="DuoPlayer.js"></script>
+  <script src="DuoPlayer.js"></script>
 </html>
