--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="container">
       <button id="computer" class="option">Computer</button>
-      <a id = "link" href=""><button id="duo" class="option">Pass and Play</button></a>
+      <a id = "link" href="https://nilayd-lab.github.io/Connect-4/Duo.html"><button id="duo" class="option">Pass and Play</button></a>
     </div>
     
   </body>
