--- a/Duo.html
+++ b/Duo.html
@@ -17,9 +17,11 @@
       <div id = "five" class="col"></div>
       <div id = "six" class="col"></div>
       <div id = "seven" class="col"></div>
-    
     </div>
-    
+    <div id = "buttons-container">
+      <div id = "redo" class="btn"></div>
+      <div id = "clear" class="btn"></div>
+    </div>
   </body>
 
   <script src="DuoPlayer.js"></script>
