--- a/Duo.html
+++ b/Duo.html
@@ -19,8 +19,8 @@
       <div id = "seven" class="col"></div>
     </div>
     <div id = "buttons-container">
-      <div id = "redo" class="btn"></div>
-      <div id = "clear" class="btn"></div>
+      <div id = "undo" class="btn"><p>Undo</p></div>
+      <div id = "clear" class="btn"><p>Clear</p><div id="arr"></div></div>
     </div>
   </body>
 
