--- a/Duo.html
+++ b/Duo.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id = "container">
-      <img src="board.png" alt="Connect-4 Board" />
+      <img src="board.png (2).png" alt="Connect-4 Board" />
       <div id = "one" class="col"></div>
       <div id = "two" class="col"></div>
       <div id = "three" class="col"></div>
@@ -20,7 +20,7 @@
     </div>
     <div id = "buttons-container">
       <div id = "undo" class="btn"><p>Undo</p></div>
-      <div id = "clear" class="btn"><p>Clear</p><div id="arr"></div></div>
+      <div id = "clear" class="btn" style="--degree: 0deg;"><p>Clear</p><div id="arr"></div></div>
     </div>
   </body>
 
