--- a/Duo.html
+++ b/Duo.html
@@ -20,7 +20,7 @@
     </div>
     <div id = "buttons-container">
       <div id = "undo" class="btn"><p>Undo</p></div>
-      <div id = "clear" class="btn" style="--degree: 0deg;"><p>Clear</p><div id="arr"></div></div>
+      <div id = "clear" class="btn"><p>Clear</p><div id="arr"></div></div>
     </div>
   </body>
 
