--- a/Duo.html
+++ b/Duo.html
@@ -23,6 +23,5 @@
       <div id = "clear" class="btn"><p>Clear</p><div id="arr"></div></div>
     </div>
   </body>
-
-  <script src="DuoPlayer.js"></script>
+  <script src="DuoPlayer.js" type="module"></script>
 </html>
