--- a/Solo.html
+++ b/Solo.html
@@ -18,8 +18,8 @@
       <div id="six" class="col"></div>
       <div id="seven" class="col"></div>
     </div>
-    <div id="buttons-container" style = "height: 75%;">
-      <button id = "level-button"></button>
+    <div id="buttons-container" style="height: 75%">
+      <button id="level-button"></button>
 
       <div id="undo" class="btn"><p>Undo</p></div>
       <div id="clear" class="btn">
