--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
   </head>
   
   <body>
-    <div id="pop-up-container">
-      <a href=""><button id="hard" class="pop-up">Hard</button></a>
-      <a href=""><button id="medium" class="pop-up">Medium</button></a>
-      <a href=""><button id="easy" class="pop-up">Easy</button></a>
-    </div>
+
     <div id="player-one" class="chip"></div>
     <button id="piece"></button>
     <h1 id="title">Connect-4</h1>
 
     <div id="container">
-      <button id="computer" class="option">Computer</button>
+      <a id = "link" href="https://nilayd-lab.github.io/Connect-4/Solo.html"><button id="solo" class="option">Computer</button></a>
       <a id = "link" href="https://nilayd-lab.github.io/Connect-4/Duo.html"><button id="duo" class="option">Pass and Play</button></a>
     </div>
     
